...
    <string name="chart_error_state_format">Data for Item %1$s could not be loaded. Most likely the type of the Item is not compatible with being shown in a chart.</string>
    <string name="chart_error_generic">Loading the chart data failed (HTTP status code %1$d).</string>
    <string name="chart_error_retry_button_chart_image">Load chart as image</string>
    <string name="chart_error_retry_button_retry">Retry</string>

    <!-- NFC -->
    <string name="nfc_action_on">On</string>
    <string name="nfc_action_up">Up</string>
    <string name="nfc_action_off">Off</string>
    <string name="nfc_action_down">Down</string>
    <string name="nfc_action_toggle">Toggle</string>
    <string name="nfc_action_toggled">Toggled</string>
    <string name="nfc_action_undefined">Undefined</string>
    <string name="nfc_action_empty_string">Empty string</string>
    <string name="nfc_action_increase">Increase</string>
    <string name="nfc_action_decrease">Decrease</string>
    <string name="nfc_action_play">Play</string>
...
    <string name="nfc_action_move">Move</string>
    <string name="nfc_action_stop">Stop</string>
    <string name="nfc_action_open">Opened</string>
    <string name="nfc_action_closed">Closed</string>
    <string name="nfc_activate">Activate</string>
    <string name="nfc_action_current_color">Current color</string>
    <string name="nfc_action_to_sitemap_page">Write Sitemap NFC tag</string>
    <string name="nfc_action_write_command_tag">Write Item NFC tag</string>

    <!-- Drawer -->
    <string name="drawer_active_server_label">Active server</string>
    <string name="drawer_open">Open side menu</string>
    <string name="drawer_close">Close side menu</string>
    <string name="mainmenu_openhab_voice_recognition">Voice recognition</string>
...
