...
    <string name="info_write_tag_unsupported">This device doesn\'t have NFC support :-(</string>
    <string name="info_write_tag_disabled">NFC is disabled. Please enable it in device settings menu.</string>
    <string name="info_openhab_version_label">openHAB Version</string>
    <string name="info_openhab_uuid_label">openHAB UUID</string>
    <string name="info_openhab_secret_label">openHAB Secret</string>
    <string name="action_settings">Settings</string>
    <string name="nfc_dialog_title">Please select NFC tag action</string>
    <string name="info_not_set">Not set</string>
    <!-- Strings for MemorizingTrustManager activity -->
    <string name="mtm_accept_cert">Accept unknown Certificate?</string>
    <string name="mtm_decision_always">Always</string>
    <string name="mtm_decision_once">Once</string>
    <string name="mtm_decision_abort">Abort</string>
...
